# FoundationKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  issues.md  main.cpp
Documentation/: README.md
FoundationKitCxxAbi/: CMakeLists.txt
FoundationKitCxxAbi/Include/FoundationKitCxxAbi/Core/: Abi.hpp  Config.hpp
FoundationKitCxxAbi/Include/FoundationKitCxxAbi/Demangle/: Demangler.hpp
FoundationKitCxxAbi/Include/FoundationKitCxxAbi/Guard/: GuardObject.hpp
FoundationKitCxxAbi/Include/FoundationKitCxxAbi/Init/: GlobalInit.hpp
FoundationKitCxxAbi/Src/: CoreAbi.cpp  DemangleAbi.cpp  GuardAbi.cpp  InitAbi.cpp  OperatorNew.cpp  Personality.cpp
FoundationKitCxxStl/: CMakeLists.txt
FoundationKitCxxStl/Include/FoundationKitCxxStl/Base/: Algorithm.hpp  Array.hpp  Bcd.hpp  Bit.hpp  Bug.hpp  CharType.hpp  CommandLine.hpp  Compiler.hpp  CompilerBuiltins.hpp  Expected.hpp  FixedString.hpp  FixedVector.hpp  Flags.hpp  FlatMap.hpp  Format.hpp  Hash.hpp  HashMap.hpp  KernelError.hpp  LazyInit.hpp  Logger.hpp  Math.hpp  NumericLimits.hpp  Optional.hpp  Pair.hpp  PlacementNew.hpp  RefCounted.hpp  RefPtr.hpp  Result.hpp  Safety.hpp  Span.hpp  StaticVector.hpp  String.hpp  StringBuilder.hpp  StringUtil.hpp  StringView.hpp  Tuple.hpp  TypeIndex.hpp  Types.hpp  Utility.hpp  Variant.hpp  (+2 more)
FoundationKitCxxStl/Include/FoundationKitCxxStl/Memory/: Allocator.hpp  AnyAllocator.hpp  BumpAllocator.hpp  FallbackAllocator.hpp  NullAllocator.hpp  Operations.hpp  PlacementNew.hpp  PoolAllocator.hpp  SafeAllocator.hpp  Segregator.hpp  SharedPtr.hpp  StaticAllocator.hpp  StatsAllocator.hpp  UniquePtr.hpp
FoundationKitCxxStl/Include/FoundationKitCxxStl/Meta/: Concepts.hpp
FoundationKitCxxStl/Include/FoundationKitCxxStl/Osl/: Osl.hpp
FoundationKitCxxStl/Include/FoundationKitCxxStl/Std/: initializer_list
FoundationKitCxxStl/Include/FoundationKitCxxStl/Structure/: AtomicBitmap.hpp  AugmentedIntrusiveRbTree.hpp  BTree.hpp  BitSet.hpp  CircularLinkedList.hpp  CircularLog.hpp  DoublyLinkedList.hpp  FixedVector.hpp  FlatMap.hpp  HashMap.hpp  IdAllocator.hpp  InterruptSafeQueue.hpp  IntrusiveAvlTree.hpp  IntrusiveDoublyLinkedList.hpp  IntrusiveMinHeap.hpp  IntrusiveRedBlackTree.hpp  IntrusiveSinglyLinkedList.hpp  IntrusiveSkipList.hpp  LruCache.hpp  MpscQueue.hpp  RcuList.hpp  RingBuffer.hpp  SinglyLinkedList.hpp  WorkQueue.hpp  XArray.hpp
FoundationKitCxxStl/Include/FoundationKitCxxStl/Sync/: Atomic.hpp  AtomicFlag.hpp  AtomicPair.hpp  BitSpinLock.hpp  Cas.hpp  ConditionVariable.hpp  InterruptSafe.hpp  Locks.hpp  MCSLock.hpp  Mutex.hpp  Rcu.hpp  RcuPtr.hpp  SeqLock.hpp  SharedLock.hpp  SharedSpinLock.hpp  SpinLock.hpp  Synchronized.hpp  TaggedPtr.hpp  TicketLock.hpp
FoundationKitCxxStl/Src/Structure/: IntrusiveAvlTree.cpp  IntrusiveRedBlackTree.cpp
FoundationKitDevice/: CMakeLists.txt
FoundationKitDevice/Include/FoundationKitDevice/: DeviceManager.hpp
FoundationKitDevice/Include/FoundationKitDevice/Bus/: BusDescriptor.hpp  BusNode.hpp
FoundationKitDevice/Include/FoundationKitDevice/Core/: DeviceClass.hpp  DeviceNode.hpp  DeviceProperty.hpp  DeviceState.hpp
FoundationKitDevice/Include/FoundationKitDevice/Dma/: DmaDescriptor.hpp
FoundationKitDevice/Include/FoundationKitDevice/Driver/: DriverDescriptor.hpp  DriverRegistry.hpp  MatchEntry.hpp
FoundationKitDevice/Include/FoundationKitDevice/Power/: PowerManager.hpp
FoundationKitDevice/Include/FoundationKitDevice/Resource/: ResourceDescriptor.hpp
FoundationKitDevice/Src/: DeviceManager.cpp
FoundationKitMemory/: CMakeLists.txt
FoundationKitMemory/Include/FoundationKitMemory/: AdaptiveSegregator.hpp  AllocatorFactory.hpp  AllocatorLocking.hpp  AnyAllocator.hpp  BuddyAllocator.hpp  BumpAllocator.hpp  FallbackAllocator.hpp  FragmentationReport.hpp  FreeListAllocator.hpp  Global.hpp  GlobalAllocator.hpp  GlobalRegistry.hpp  KernelHeap.hpp  MemoryCommon.hpp  MemoryCore.hpp  MemoryObject.hpp  MemoryOperations.hpp  MemoryRegion.hpp  MemoryResource.hpp  MemorySafety.hpp  ObjectAllocator.hpp  ObjectPool.hpp  PerCpuAllocator.hpp  PerCpuStatsAllocator.hpp  PhysicalMemoryMap.hpp  PlacementNew.hpp  PoisoningAllocator.hpp  PoolAllocator.hpp  PressureManager.hpp  RcuAllocatorAdapter.hpp  ReclaimChain.hpp  RegionDescriptor.hpp  SafeAllocator.hpp  Segregator.hpp  SharedPtr.hpp  SlabAllocator.hpp  StaticAllocator.hpp  StatsAllocator.hpp  SynchronizedAllocator.hpp  TrackingAllocator.hpp  (+1 more)
FoundationKitMemory/Include/FoundationKitMemory/Allocators/: AnyAllocator.hpp  BuddyAllocator.hpp  BumpAllocator.hpp  FallbackAllocator.hpp  FreeListAllocator.hpp  NullAllocator.hpp  ObjectPool.hpp  PerCpuAllocator.hpp  PerCpuStatsAllocator.hpp  PoisoningAllocator.hpp  PoolAllocator.hpp  SafeAllocator.hpp  Segregator.hpp  SlabAllocator.hpp  StaticAllocator.hpp  StatsAllocator.hpp  SynchronizedAllocator.hpp  TrackingAllocator.hpp
FoundationKitMemory/Include/FoundationKitMemory/Core/: MemoryCommon.hpp  MemoryCore.hpp  MemoryObject.hpp  MemoryOperations.hpp  MemorySafety.hpp
FoundationKitMemory/Include/FoundationKitMemory/Heap/: GlobalAllocator.hpp  KernelHeap.hpp
FoundationKitMemory/Include/FoundationKitMemory/Management/: AddressSpace.hpp  AddressTypes.hpp  KernelMemoryManager.hpp  MemoryPressureManager.hpp  MemoryRegion.hpp  PageDescriptor.hpp  PageDescriptorArray.hpp  PageFrameAllocator.hpp  PageQueue.hpp  PhysicalMemoryMap.hpp  RegionDescriptor.hpp  VirtualAddressSpace.hpp  VmFault.hpp  VmObject.hpp  VmPager.hpp  VmaDescriptor.hpp  VmmConcepts.hpp
FoundationKitMemory/Include/FoundationKitMemory/Ptr/: SharedPtr.hpp  UniquePtr.hpp
FoundationKitMemory/Include/FoundationKitMemory/Support/: FragmentationReport.hpp  RcuAllocatorAdapter.hpp  ReclaimChain.hpp
FoundationKitMemory/Src/: Global.cpp  GlobalAllocator.cpp  GlobalRegistry.cpp
FoundationKitOsl/: CMakeLists.txt
FoundationKitOsl/Include/FoundationKitOsl/: Osl.hpp  PerCpu.hpp  SystemClock.hpp
FoundationKitPlatform/: CMakeLists.txt
FoundationKitPlatform/Include/FoundationKitPlatform/: Bitfield.hpp  HostArchitecture.hpp  MachineWidth.hpp
FoundationKitPlatform/Src/: TimeKeeper.cpp
Test/: CxxAbiTest.cpp  (+36 more)
(+106 files in other folders)
